force-app/main/default/objects/Inventory_Reservation__c/Inventory_Reservation__c.object-meta.xml
<CustomObject>
    <label>Inventory Reservation</label>
    <nameField>
        <displayFormat>RES-{0000}</displayFormat>
        <label>Reservation No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Reservations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>