force-app/main/default/objects/Inventory_Reservation__c/fields/Ingredient_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Ingredient_Inventory__c</fullName>
    <label>Ingredient Inventory</label>
    <referenceTo>Ingredient_Inventory__c</referenceTo>
    <relationshipLabel>Inventory Reservations</relationshipLabel>
    <relationshipName>Inventory_Reservations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>