force-app/main/default/objects/Inventory_Reservation__c/fields/Needed_By_Date__c.field-meta.xml
<CustomField>
    <fullName>Needed_By_Date__c</fullName>
    <label>Needed-By Date</label>
    <type>Date</type>
</CustomField>