force-app/main/default/objects/Inventory_Reservation__c/fields/Reservation_Type__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Type__c</fullName>
    <label>Reservation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Soft</fullName>
                <label>Soft (Same-Day)</label>
            </value>
            <value>
                <fullName>Forward</fullName>
                <label>Forward (Bulk)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>